@@ -1,3 +1,4 @@
+- Sieve: Added :create after the fileinto action. This will autocreate the folder if it doesnt exist.
 - Sieve: Fixed "Mark as read" sieve rule.
 - Sieve: Added new out of office tab in the email settings dialog.
 
